--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png">
+    <link rel="icon" sizes="192x192" href="<%= BASE_URL %>android-chrome-192x192.png">
+    <link rel="icon" sizes="512x512" href="<%= BASE_URL %>android-chrome-512x512.png">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Dope Wars</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
